--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "growi-plugin-script-template",
+  "name": "growi-plugin-rss-reader",
   "version": "1.0.0",
-  "description": "GROWI plugin template for script",
+  "description": "GROWI plugin to read RSS",
   "license": "MIT",
   "keywords": [
     "growi",
