--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-async": "^10.0.1",
     "react-dom": "^18.3.1",
     "react-innertext": "^1.1.5"
   },
